--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
     <header class="header">
@@ -36,5 +37,58 @@
         </div>
 
     </header>
+    <footer class="footer" >
+        <div class="container">
+        <div class="row">
+        <div class="footer-left-side">
+            <div class="logo"> <img src="./assets/image/Logo.jpg" alt="logo"><a href="#">mangcoding Store</a></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor, erat sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
+            <div class="footer-icons">
+                <a href="#" class="icon"><img src="./assets/image/facebook logo.svg" alt="facebook"></a>
+                <a href="#" class="icon"> <img src="./assets/image/Twitter logo.svg" alt="Twitter"></a>
+                <a href="#" class="icon"><img src="./assets/image/linkedin logo.svg" alt="linkedin"></a>
+                <a href="#" class="icon"><img src="./assets/image/instagram logo.svg" alt="instagram"></a>
+            </div>
+        </div>
+        <div class="footer-right-side">
+            <div class="footer-item">
+                <h2>Home</h2>
+                <ul>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Course</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Log in</a></li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h2>Course</h2>
+                <ul>
+                    <li><a href="#">HTMK & CSS</a></li>
+                    <li><a href="#">Javascript </a></li>
+                    <li><a href="">Fotographer</a></li>
+                    <li><a href="#">Desain Grafis</a></li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h2>Article</h2>
+                <ul>
+                    <li><a href="#">New</a></li>
+                    <li><a href="#">Old</a></li>
+                    <li><a href="#">Trend</a></li>
+                    <li><a href="#">Popular</a></li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h2>Contact Us</h2>
+                <ul>
+                    <li><a href="#">CCdoc123@gmail.com</a></li>
+                </ul>
+            </div>
+        
+        
+        </div>
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
